# ece556

./: .gitmodules  README.md
PA1/: Makefile  essentials.hpp  fm  fm.cpp
PA2/: 0.output  1.output  2.output  3.output  Makefile  _debug_construct  _debug_graph  _debug_hpwl  ami33.output  ami49.output  apte.output  floorplanner  floorplanner.cpp  floorplanner.hpp  hp.output  main.cpp  test_.output  xerox.output
PA2/input_pa2/: 0.block  0.nets
PA3/: CMakeLists.txt  README.md
PA3/input_pa3/: case0
PA3/src/: main.cpp  parser.cpp  steiner.hpp
